# fabryka

./: .gitignore  CMakeLists.txt  README.md  notatki
data/: warehouse_state
dokumentacja/: README.md  tresc_zadania.docx
include/: config.h  director.h  factory.h  machine.h  supplier.h  utilities.h  warehouse.h  worker.h
src/: director.cpp  factory.cpp  machine.cpp  supplier.cpp  utilities.cpp  warehouse.cpp  worker.cpp
